tests/ui/not_send.stderr
error[E0277]: `pyo3::Python<'_>` cannot be shared between threads safely
   --> tests/ui/not_send.rs:4:22
    |
4   |     py.allow_threads(|| { drop(py); });
    |        ------------- ^^^^^^^^^^^^^^^^ `pyo3::Python<'_>` cannot be shared between threads safely
    |        |
    |        required by a bound introduced by this call
    |
    = help: the trait `Sync` is not implemented for `pyo3::Python<'_>`
    = note: required for `&pyo3::Python<'_>` to implement `Send`
note: required because it's used within this closure
   --> tests/ui/not_send.rs:4:22
    |
4   |     py.allow_threads(|| { drop(py); });
    |                      ^^
    = note: required for `[closure@$DIR/tests/ui/not_send.rs:4:22: 4:24]` to implement `Ungil`
note: required by a bound in `pyo3::Python::<'py>::allow_threads`
   --> src/marker.rs
    |
    |         F: Ungil + FnOnce() -> T,
    |            ^^^^^ required by this bound in `pyo3::Python::<'py>::allow_threads`
